- changed all views to include from "includes" instead of "/includes" so that example-site can work in a non-root location - updated INSTALL with example on how to get Dragonfly running on apache in non-root - fixed issue with $GET

--- a/example-site/includes/css/twitter.css
+++ b/example-site/includes/css/twitter.css
@@ -38,6 +38,6 @@ div.bubble cite {
 	margin: 0px;
 	padding: 7px 0px 0px 15px;
 	top: 6px;
-	background: transparent url(/includes/images/tip.gif) no-repeat 20px 0;
+	background: transparent url(includes/images/tip.gif) no-repeat 20px 0;
 	font-style: normal;
 }
