--- a/example-site/includes/css/screen.css
+++ b/example-site/includes/css/screen.css
@@ -117,6 +117,7 @@ body img {
 	#content h4 {
 		font-size:14px;
 		font-weight:bold;
+		margin-top:14px;
 	}
 
 	/* Paragraph styles */
@@ -124,6 +125,7 @@ body img {
 	#content p {
 		font-size:12px;
 		line-height:17px;
+		margin-top:8px;
 	}
 	
 	#content .author {
@@ -140,7 +142,7 @@ body img {
 	
 	#content ul, ol {
 		margin-top:12px;
-		padding-left:25px;
+		padding-left:45px;
 	}
 	
 	#content li {
