--- a/example-site/views/dragonfly_welcome.html
+++ b/example-site/views/dragonfly_welcome.html
@@ -46,7 +46,7 @@
 		
 		<p>By "site root" we mean the folder that represents your basic web address,
 		for example if your website is located at:<br/><br/>
-		http://wwww.example-site.com/
+		http://www.example-site.com/
 		<br/><br/>
 		And on your webserver that is represented by this folder (called the "site root"):
 		<br/><br/>
@@ -56,13 +56,13 @@
 		<br/><br/>
 		</p>
 		<p class="info"><b>Information</b><br/>If you'd like Dragonfly to live somewhere else inside your site root,
-		see the Example step on this page.</p>
+		click <% (link_to "here" "setup_example") %> for instructions.</p>
 		
 		<h2>Step 2 - Configure Dragonfly</h2>
 		<p>Edit the 'config.lsp' file in dragonfly-framework.<br/><br/>Read through the comments (they begin with a semi-colon) for instructions on what the settings are for.<br/><br/>If you want to prevent .html files from being processed through Dragonfly, open the .htaccess file in the site root and read the comments there for how to disable that behavior.
 		</p>
 
-		<h2>Step 3 - That's it'</h2>
+		<h2>Step 3 - That's it!</h2>
 		<p>You're ready to run Dragonfly!</p>
 		
 		<div class="line-dotted"></div>
