--- a/example-site/views/dragonfly_ajax.html
+++ b/example-site/views/dragonfly_ajax.html
@@ -19,10 +19,10 @@
 		<p class="extract">Dragonfly provides some simple AJAX functions. With AJAX, web applications can retrieve data from the server asynchronously in the background without interfering with the display and behavior of the existing page. The use of AJAX techniques has led to an increase in interactive or dynamic interfaces on web pages and better quality of Web services due to the asynchronous mode. Data is usually retrieved using the XMLHttpRequest object. (source: wikipedia.org)
 		</p>
 		<h2>Current time</h2>
-		<p><% (ajax-updater "timer" "/dragonfly_ajax-date" "gettime" "1000") %></p>
+		<% (ajax-updater "timer" "/dragonfly_ajax-date" "gettime" 1000) %>
 
 		<h2>Real-time tweets for 'michael jackson'</h2>
-		<p><% (ajax-updater "twitter" "/dragonfly_ajax-twitter" "gettweets" "1000") %></p>
+		<% (ajax-updater "twitter" "/dragonfly_ajax-twitter" "gettweets" 5000) %>
 		
 		<div class="line-dotted"></div>
 
