--- a/example-site/views/partials/navigation.html
+++ b/example-site/views/partials/navigation.html
@@ -3,34 +3,42 @@
 <ul>
 	<li><% (link_to "Welcome" "welcome") %></li>
 	<li>
-	<a href="#" onclick="toggleMenu(); return false;" id="guidesMenu">User Guide</a>
-	
-	          <div id="menu" class="clearfix" style="display:none;">
-	            <dl class="L">
-	              <dt>Getting started</dt>
-				  <dd><% (link_to  "Welcome" "dragonfly_welcome") %></dd>
+		<a href="#" class="menu_toggle">User Guide</a> 
+		<div class="menu clearfix" style="display:none;">
+			<dl class="L">
+				<dt>Getting started</dt>
+				<dd><% (link_to  "Welcome" "dragonfly_welcome") %></dd>
 
-				  <dt>Using routes in Dragonfly</dt>
-				  <dd><% (link_to  "Default Routes" "dragonfly_routes") %></dd>
+				<dt>Routes</dt>
+				<dd><% (link_to  "Default routes" "dragonfly_routes") %></dd>
+				
+				<dt>Templates</dt>
+				<dd><% (link_to  "Creating templates" "dragonfly_views") %></dd>
+			</dl>
+		</div>
+	</li>
+	<li>
+		<a href="#" class="menu_toggle">Examples</a>
+		<div class="menu clearfix" style="display:none;">
+			<dl class="L">
+				<dt>Tables</dt>
+				<dd><% (link_to "Generate tables from lists" "dragonfly_tables") %></dd>
 
-	              <dt>Tables</dt>
-	              <dd><% (link_to "Generate tables from lists" "dragonfly_tables") %></dd>
+				<dt>AJAX</dt>
+				<dd><% (link_to "Some simple AJAX calls" "dragonfly_ajax") %></dd>
 
-	              <dt>AJAX</dt>
-	              <dd><% (link_to "Some simple AJAX calls" "dragonfly_ajax") %></dd>
-	
-	              <dt>Twitter</dt>
-	              <dd><% (link_to "Using Twitter with Dragonfly" "dragonfly_twitter") %></dd>
+				<dt>Twitter</dt>
+				<dd><% (link_to "Using Twitter with Dragonfly" "dragonfly_twitter") %></dd>
 
-	              <dt>SEO Experiments</dt>
-	              <dd><% (link_to "Experiments in SEO" "dragonfly_seo") %></dd>
-				</dl>
-	
-				<dl class="R">
-	              <dt>Useful information</dt>
-	              <dd><% (link_to  "Dragonfly debugging information" "dragonfly_debug") %></dd>
-				</dl>
-				</div>
+				<dt>SEO Experiments</dt>
+				<dd><% (link_to "Experiments in SEO" "dragonfly_seo") %></dd>
+			</dl>
+
+			<dl class="R">
+				<dt>Useful information</dt>
+				<dd><% (link_to  "Dragonfly debugging information" "dragonfly_debug") %></dd>
+			</dl>
+		</div>
 	</li>
 	<li><% (link_to "Code" "code") %></li>
 	<li><% (link_to "About" "about") %></li>
