--- a/example-site/views/partials/navigation.html
+++ b/example-site/views/partials/navigation.html
@@ -15,6 +15,10 @@
 				<dt>Templates</dt>
 				<dd><% (link_to  "Creating templates" "dragonfly_views") %></dd>
 			</dl>
+			<dl class="R">
+				<dt>Core API</dt>
+				<dd><% (link_to  "Reference for Dragonfly's core API" "dragonfly_api") %></dd>
+			</dl>
 		</div>
 	</li>
 	<li>
