--- a/example-site/views/dragonfly_views.html
+++ b/example-site/views/dragonfly_views.html
@@ -1,5 +1,7 @@
 <% (display-partial "doctype") %>
-<% (display-partial "header") %>
+<head>
+	<% (display-partial "header") %>
+</head>
 
 <body>
 
@@ -22,15 +24,15 @@
 		<p>Example: open Your favorite text-editor and enter the following:</p>
 		<pre class="code">Hello World</pre>
 		<p>Save the file as "hello" into Your views directory. Now open Your browser and navigate to <a href="http://www.example-site.com/hello">example-site.com/hello</a>. That's it!</p>
-		<p class="info"><b>Information</b><br/>You can put nearly everything into views: (X)HTML, Javascript, newLISP code.</p>
-		<p class="config"><b>Configuration</b><br/>If VIEW_EXTENSION is ".html" for example, then when example-site.com/hello is called Dragonfly will search for a "hello.html" file in the VIEWS_PATH. It also applies to the partials, too.</p>
+		<p class="info"><b>INFORMATION</b><br/>You can put nearly everything into views: (X)HTML, Javascript, newLISP code.</p>
+		<p class="config"><b>CONFIGURATION</b><br/>If VIEW_EXTENSION is ".html" for example, then when example-site.com/hello is called Dragonfly will search for a "hello.html" file in the VIEWS_PATH. It also applies to the partials, too.</p>
 
 		<h2>How to call functions inside a view</h2>
 		<pre class="code">&lt;% (benchmark-result) %&gt;</pre>
 		
 		<p>Put Your function call inside our open and close brackets and there You go! That will display some stats about rendering time and memory consumption.</p>
 		
-		<p class="info"><b>Information</b><br/>You can use all functions from newLISP and Dragonfly. Additionally You may write Your own functions inside a plugin and just put the file into the "plugins-active" directory.</p>
+		<p class="info"><b>INFORMATION</b><br/>You can use all functions from newLISP and Dragonfly. Additionally You may write Your own functions inside a plugin and just put the file into the "plugins-active" directory.</p>
 				
 		<h2>How to load a partial view</h2>
 		<p>Partials are just like views, there's really no difference. Sometimes it's nice
