--- a/example-site/views/dragonfly_welcome.html
+++ b/example-site/views/dragonfly_welcome.html
@@ -1,5 +1,7 @@
 <% (display-partial "doctype") %>
-<% (display-partial "header") %>
+<head>
+	<% (display-partial "header") %>
+</head>
 
 <body>
 
@@ -31,40 +33,53 @@
 		</ul>
 		
 		<p>If you meet those requirements, great!
-		<p class="config"><b>Configuration</b><br/>If you're using a custom web server, you might want to setup your own redirection script based on the .htaccess file.
+		<p class="config"><b>CONFIGURATION</b><br/>If you're using a custom web server, you might want to setup your own redirection script based on the .htaccess file.
 		</p>
-
-		<h2>Step 1 - Copying Files</h2>
+		
+		<h2>newLISP Server</h2>
+		<p>You can easily run this website locally using newLISP's built-in web server:</p>
+		<pre class="code">$ cd path/to/dragonfly-newlisp/example-site
+$ newlisp -http -w . -d 8080</pre>
+		<p>Then just point your browser to:</p>
+		<p><span class="code">http://localhost:8080</span></p>
+		<p>When using newLISP as the server links must have a question mark prepended to them. For example:</p>
+		<p><span class="code">http://localhost:8080/?welcome</p>
+		<p class="info"><b>INFORMATION</b><br/>For information on how to configure dragonfly, see <a href="#config">Step 2: Configuring Dragonfly</a> below.</p>
+		
+		<h2>Apache Server</h2>
+		<h3 class="code">Step 1: Copying Files</h3>
 		<p>There are three things you'll need to copy into your site's root to install
-		Dragonfly. You'll find these files inside the 'example-site' folder.</p>
+		Dragonfly. You'll find these files inside the <span class="code">example-site</span> folder.</p>
 		
 		<ol>
-			<li>The 'dragonfly-framework' folder</li>
+			<li>The <span class="code">dragonfly-framework</span> folder</li>
 			<li>index.cgi</li>
 			<li>.htaccess (this file is hidden)</li>
 		</ol>
 		
 		<p>By "site root" we mean the folder that represents your basic web address,
-		for example if your website is located at:<br/><br/>
-		http://www.example-site.com/
-		<br/><br/>
-		And on your webserver that is represented by this folder (called the "site root"):
-		<br/><br/>
-		/home/www/example-site.com/
-		<br/><br/>
+		for example if your website is located at:</p><p>
+		<span class="code">http://www.example-site.com/</span>
+		</p><p>
+		If on your webserver that is represented by this folder (called the "site root"):
+		</p><p>
+		<span class="code">/home/www/example-site.com/</span>
+		</p><p>
 		Then that's the folder you'll want to copy the files into.
-		<br/><br/>
 		</p>
-		<p class="info"><b>Information</b><br/>If you'd like Dragonfly to live somewhere else inside your site root,
+		<p class="info"><b>INFORMATION</b><br/>If you'd like Dragonfly to live somewhere else inside your site root,
 		click <% (link_to "here" "setup_example") %> for instructions.</p>
 		
-		<h2>Step 2 - Configure Dragonfly</h2>
-		<p>Edit the 'config.lsp' file in dragonfly-framework.<br/><br/>Read through the comments (they begin with a semi-colon) for instructions on what the settings are for.<br/><br/>If you want to prevent .html files from being processed through Dragonfly, open the .htaccess file in the site root and read the comments there for how to disable that behavior.
+		<h3 class="code">Step 2: Configure Dragonfly</h3>
+		<p>You can configure various aspects of Dragonfly's behavior by editing the <b>config.lsp</b> file in the <span class="code">dragonfly-framework</span> folder.</p><p>Read through the comments (they begin with a semi-colon) for instructions on what the settings are for.</p>
+		<a name="config"></a>
+		<p>By default, Apache will send all .html files through Dragonfly for further processing (if necessary) to allow for PHP-like development. If you wish to change this behavior, open the .htaccess file in the site root and read through the comments there.
 		</p>
 
-		<h2>Step 3 - That's it!</h2>
+		<h3 class="code">Step 3: That's it!</h3>
 		<p>You're ready to run Dragonfly!</p>
-		
+		<p class="continue"><% (link_to "CONTINUE &raquo;" "dragonfly_routes") %></p>
+		<div class="clear"></div>
 		<div class="line-dotted"></div>
 
 		<% (benchmark-result) %>
