--- a/example-site/views/setup_example.html
+++ b/example-site/views/setup_example.html
@@ -1,5 +1,7 @@
 <% (display-partial "doctype") %>
-<% (display-partial "header") %>
+<head>
+	<% (display-partial "header") %>
+</head>
 
 <body>
 
@@ -20,34 +22,35 @@
 		directory into the root of your site. As an example the demo site
 		could be located here:</p>
 
-		<pre class="code">/home/user/mysite.com/dragonfly/example-site/</pre>
+		<p><span class="code">/home/user/mysite.com/dragonfly/example-site/</span></p>
 
 		<p>And to access it you would use this URL:</p>
 
-		<pre class="code">http://www.mysite.com/dragonfly/example-site/</pre>
+		<p><span class="code">http://www.mysite.com/dragonfly/example-site</span></p>
 
-		<h3 class="code">Step 1 to get it worked with Apache</h3>
-		<p>Change this line in <b>.htaccess</b></p>
+		<h3 class="code">Step 1: Update the .htaccess file</h3>
+		<p>The <b>.htaccess</b> file is a hidden file located inside the example-site folder.<br/>Change this line in <b>.htaccess</b>:</p>
 
 			<pre class="code">RewriteBase /</pre>
 			<p>To:</p>
 			<pre class="code">RewriteBase /dragonfly/example-site/</pre>
 
 
-		<h3 class="code">Step 2</h3>
+		<h3 class="code">Step 2: Update Dragonfly's configuration</h3>
 
-		<p>Edit <b>config.lsp</b> and change this line</p>
+		<p>In <span class="code">example-site/dragonfly-framework</span> you'll find the file <b>config.lsp</b>.<br/>Change this line:</p>
 
 			<pre class="code">(constant (global 'DOCUMENT_ROOT) (env "DOCUMENT_ROOT"))</pre>
 			<p>To:</p>
-			<pre class="code">(constant (global 'DOCUMENT_ROOT) "/home/user/mysite.com/dragonfly/example-site")</pre>
+			<pre class="code">(constant (global 'DOCUMENT_ROOT)
+          "/home/user/mysite.com/dragonfly/example-site")</pre>
 
 		<h3 class="code">Step 3 (optional): newLISP outside from /usr/bin/</h3>
 		<p>
 		A possible third step is required if your newlisp binary is NOT
 		installed in <b>/usr/bin/newlisp</b>.<br/><br/>If it's installed somewhere else
 		(for example: /path/to/bin/newlisp), then you may need to also
-		edit <b>index.cgi</b> file and change the top-line from:</p>
+		edit <b>index.cgi</b> file and change the top line from:</p>
 
 		<pre class="code">#!/usr/bin/env newlisp</pre>
 		<p>To:</p>
