--- a/example-site/views/dragonfly_routes.html
+++ b/example-site/views/dragonfly_routes.html
@@ -32,17 +32,17 @@
 		<p>
 			This route is very flexible, and there are only three configuration parameters that may want to adjust in <b>config.lsp</b>:
 		</p>
-		<h3 class="code">ENABLE_STATIC_TEMPLATES</h3>
-		<p>Default value: <b>true</b></p>
+		<h3 class="param">ENABLE_STATIC_TEMPLATES</h3>
+		<p>Default value: <span class="code"><b>true</b></span></p>
 		<p>
-			Setting this value to <b>nil</b> will remove <span class="code">Route.Static</span> from Dragonfly's list of routes. If you disable this and you're using Dragonfly with the Apache web server, be sure to also comment out this line in <b>.htaccess</b>:
+			Setting this value to <span class="code"><b>nil</b></span> will remove <span class="code">Route.Static</span> from Dragonfly's list of routes. If you disable this and you're using Dragonfly with the Apache web server, be sure to also comment out this line in <b>.htaccess</b>:
 		<pre class="code">RewriteCond %{REQUEST_FILENAME} \.html$</pre>
-		<h3 class="code">STATIC_TRIGGER_EXTENSIONS</h3>
-		<p>Default value: <b>'(".html")</b></p>
+		<h3 class="param">STATIC_TRIGGER_EXTENSIONS</h3>
+		<p>Default value: <span class="code"><b>'(".html")</b></span></p>
 		<p>
 			TODO: this
 		</p>
-		<h3 class="code">STATIC_TRANSFORMATIONS</h3>
+		<h3 class="param">STATIC_TRANSFORMATIONS</h3>
 		<p>Default value:</p>
 		<pre class="code">'(
     (string DOCUMENT_ROOT "/" _ "/index.html")
