--- a/example-site/views/partials/navigation.html
+++ b/example-site/views/partials/navigation.html
@@ -11,6 +11,7 @@
 
 				<dt>Routes</dt>
 				<dd><% (link_to  "Default routes" "dragonfly_routes") %></dd>
+				<dd><% (link_to  "Creating your own" "dragonfly_routes") %></dd>
 				
 				<dt>Templates</dt>
 				<dd><% (link_to  "Creating templates" "dragonfly_views") %></dd>
