--- a/example-site/views/partials/navigation.html
+++ b/example-site/views/partials/navigation.html
@@ -7,11 +7,11 @@
 		<div class="menu clearfix" style="display:none;">
 			<dl class="L">
 				<dt>Getting started</dt>
-				<dd><% (link_to  "Welcome" "dragonfly_welcome") %></dd>
+				<dd><% (link_to  "Setting up Dragonfly" "dragonfly_welcome") %></dd>
 
 				<dt>Routes</dt>
 				<dd><% (link_to  "Default routes" "dragonfly_routes") %></dd>
-				<dd><% (link_to  "Creating your own" "dragonfly_routes") %></dd>
+				<dd><% (link_to  "Creating your own routes" "dragonfly_create_routes") %></dd>
 				
 				<dt>Templates</dt>
 				<dd><% (link_to  "Creating templates" "dragonfly_views") %></dd>
