Added a function to parse atomFeeds. Example is on the Code page.

--- a/example-site/views/code.html
+++ b/example-site/views/code.html
@@ -22,7 +22,7 @@
 		<h1>Dragonfly Source Code</h1>
 		<p class="extract">Dragonfly is hosted on Google Code. You got two options for getting Dragonfly up and running:
 		</p>
-
+		
 		<h2>No 1. Get the latest, bleeding edge version (Mercurial repository)</h2>
 		<ul>
 			<li>Make sure You're able to run the hg command (Mercurial)</li>
@@ -36,6 +36,12 @@
 			<li>Open Your browser and download the ZIP archive from this address</li>
 			<li><a href="http://code.google.com/p/dragonfly-newlisp/downloads/list" target="_blank">Latest stable version</a></li>
 		</ul>
+
+		<h2>The last changes</h2>
+		<p>
+		<% (read-atom-feed "http://code.google.com/feeds/p/dragonfly-newlisp/hgchanges/basic") %>	
+		</p>
+
 		
 		<div class="line-dotted"></div>
 
