Added an example page for using atom feeds with Dragonfly.

--- a/example-site/views/partials/navigation.html
+++ b/example-site/views/partials/navigation.html
@@ -29,6 +29,9 @@
 				<dt>Tables</dt>
 				<dd><% (link_to "Generate tables from lists" "dragonfly_tables") %></dd>
 
+				<dt>Feeds</dt>
+				<dd><% (link_to "How to read feeds from other websites" "dragonfly_feeds") %></dd>
+
 				<dt>AJAX</dt>
 				<dd><% (link_to "Some simple AJAX calls" "dragonfly_ajax") %></dd>
 
